# otterapi

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties  sonarqube-findings.md  vulture_whitelist.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: qa.yml  release.yml
jira_client/: __init__.py  _client.py  client.py  endpoints.py  models.py
otterapi/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
otterapi/codegen/: __init__.py  _body_builder.py  _features.py  _openapi_adapter.py  ast_utils.py  client.py  client_generator.py  codegen.py  dataframe_generator.py  dataframe_utils.py  dataframes.py  emitter.py  endpoints.py  export.py  file_writer.py  generator.py  import_collector.py  openapi_processor.py  pagination.py  schema.py  schema_loader.py  schema_resolver.py  splitting.py  type_generator.py  type_registry.py  types.py  utils.py
otterapi/codegen/builders/: __init__.py  endpoint_factory.py  model_collector.py  parameter_builder.py  signature_builder.py
otterapi/codegen/processors/: __init__.py  parameter_processor.py  response_processor.py
otterapi/codegen/runtime/: _client_stub.py.tpl  _dataframe.py  _export.py  _models_mixin.py  _pagination.py  _retry.py
otterapi/codegen/splitting/: __init__.py  emitter.py  resolver.py  tree.py
otterapi/codegen_v2/: codegen.py  endpoints.py  schema_loader.py  types.py  utils.py
otterapi/openapi/: __init__.py  constants.py  warnings.py
otterapi/openapi/v2/: __init__.py  v2.py
otterapi/openapi/v3/: __init__.py  v3.py
otterapi/openapi/v3_1/: __init__.py  spec.json  v3_1.py
otterapi/openapi/v3_2/: __init__.py  spec.json  v3_2.py
otterapi/tests/: __init__.py  test_ast_utils.py  test_body_builder.py  test_cli.py  test_client_retry_lifecycle.py  test_codegen.py  test_codegen_edge_cases.py  test_codegen_structure.py  test_concurrency_runtime.py  test_config.py  test_config_errors.py  test_dataframe.py  test_discriminated_unions.py  test_endpoints.py  test_exceptions.py  test_export.py  test_extra_forbid.py  test_feature_modules.py  test_golden.py  test_html_repr.py  test_init_scaffold.py  test_integration.py  test_not_schema.py  test_nullable_upgrade.py  test_openapi_adapter.py  test_openapi_support.py  test_openapi_upgrade.py  test_pagination.py  test_per_status_errors.py  test_public_api.py  test_recursive_schema.py  test_regen_script.py  test_retry_runtime.py  test_runtime_guards.py  test_schema_constraints.py  test_smoke_generated_client.py  test_splitting_config.py  test_splitting_integration.py  test_splitting_resolver.py  test_splitting_tree.py  (+1 more)
otterapi/tests/fixtures/: __init__.py
otterapi/tests/fixtures/golden/constraints/: spec.yaml
otterapi/tests/fixtures/golden/constraints/expected/: __init__.py  _client.py  _concurrency.py  _retry.py  client.py  endpoints.py  models.py
otterapi/tests/fixtures/golden/dataframe/: config.yaml  spec.yaml
otterapi/tests/fixtures/golden/dataframe/expected/: __init__.py  _client.py  _dataframe.py  client.py  endpoints.py  models.py
otterapi/tests/fixtures/golden/discriminator/: spec.yaml
otterapi/tests/fixtures/golden/discriminator/expected/: __init__.py  _client.py  client.py  endpoints.py  models.py
otterapi/tests/fixtures/golden/paginated/: config.yaml  spec.yaml
otterapi/tests/fixtures/golden/paginated/expected/: __init__.py  _client.py  _pagination.py  client.py  endpoints.py  models.py
petstore_client/: endpoints.py  models.py
scripts/: regen_openapi_models.py
